build: java 21 compatibility
Add --add-opens JVM arguments for reflection access on newer JDKs.

Signed-off-by: Peter Boden <peter.boden@team.blue>